added toolbox emoji

--- a/README.html
+++ b/README.html
@@ -359,7 +359,7 @@ display: none;
 <p>AI &amp; ML Enthusiast | Crypto Data Analyst | Statistics</p>
 </h2>
 <div id="technologies-tools" class="section level3">
-<h3><strong>Technologies &amp; Tools</strong></h3>
+<h3>🧰 <strong>Technologies &amp; Tools</strong></h3>
 <p align="center">
 <p><a href="https://skillicons.dev">
 <svg id="svg_8bbd6949c44505b1ae16" role="img" width="835.5" height="48" viewBox="0 0 4456 256" fill="none">
